@@ -4,6 +4,7 @@
 * FindFirst & sort cols
 * removeOne, chez id exists and data loaded
 * beforeCreate and beforeSave call on right place
+* Between and transaction
 
 # 1.1.0 : 24/05/2020
 
